--- a/styles/style.css
+++ b/styles/style.css
@@ -11,10 +11,15 @@
   --lifely-hover-red: #eb5a5a;
   --white: #ffffff;
 
-  /* text */
-  --lifely-primary-font: "aktiv-grotesk", sans-serif;
-  --lifely-primary-fs: 1.875em;
-  --lifely-primary-lh: 1.5em;
+  /* typography:
+   !! only use primary font for titles
+   !! only use secondary font for the intro onliner
+   !! only use base font for the normal text
+  */
+
+  --lifely-primary-font: 700 2.5em/1.125em "aktiv-grotesk", sans-serif;
+  --lifely-secondary-font: 400 0.85em/0.5em "Playfair Display", serif;
+  --lifely-base-font: 100 1.125em/1.775em "aktiv-grotesk", sans-serif;
 }
 
 /* mobile view: < 480px width (30em)  */
@@ -25,35 +30,16 @@ body {
 }
 
 h1 {
-  font-family: var(--lifely-primary-font);
-  font-weight: 700;
-  font-size: var(--lifely-primary-fs);
-  line-height: var(--lifely-primary-lh);
+  font: var(--lifely-primary-font);
   letter-spacing: 0.05em;
   color: var(--lifely-grey99);
   margin: 0px;
-
-  transform: translateY(0);
-  transition-duration: 0.6s;
-  transition-timing-function: cubic-bezier(0.08, 0.415, 0.025, 0.87);
-  transition-delay: 0s;
-}
-
-h2 {
-  font-family: "aktiv-grotesk", sans-serif;
-  font-style: normal;
-  font-weight: 300;
-  font-size: 1.125em;
-  line-height: 1.875em;
-  letter-spacing: 0.05em;
-  color: var(--lifely-grey99);
 }
 
 p {
-  font-family: "aktiv-grotesk", sans-serif;
-  font-size: 1em;
-  line-height: 1.625em;
-  color: var(--white);
+  font: var(--lifely-base-font);
+  letter-spacing: 0.05em;
+  color: var(--lifely-grey99);
 }
 
 /* 
@@ -82,6 +68,7 @@ header {
   height: 2rem;
   font-weight: 300;
   font-family: "aktiv-grotesk", sans-serif;
+  font-style: normal;
   font-size: 1rem;
 }
 
@@ -100,6 +87,16 @@ svg {
 page title 
 */
 
+.intro-oneliner {
+  font: var(--lifely-secondary-font);
+  font-style: normal;
+
+  letter-spacing: 0.04em;
+  color: var(--lifely-grey99);
+
+  margin-bottom: 15px;
+}
+
 .title-space {
   display: grid;
   margin: 25px;
@@ -111,18 +108,6 @@ page title
 
 .title {
   grid-area: H;
-}
-
-.intro-text {
-  font-family: "Playfair Display", serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 0.75em;
-  line-height: 1.1875em;
-  letter-spacing: 0.04em;
-  color: var(--lifely-grey99);
-
-  margin-bottom: 15px;
 }
 
 /* 
