--- a/styles/style.css
+++ b/styles/style.css
@@ -28,6 +28,18 @@
   --lifely-mobile-ai-subtitle-font: 700 1.25em/1.75em "aktiv-grotesk",
     sans-serif;
 
+  /* 
+  typography for medium screen: 
+  !! only use primary font for titles
+   !! only use secondary font for the intro onliner
+   !! only use base font for the normal text (p)
+*/
+
+  --lifely-medium-web-primary-font: 700 48px/58px "aktiv-grotesk", sans-serif;
+  --lifely-medium-web-secondary-font: 400 24px/34px "Playfair Display", serif;
+  --lifely-medium-web-base-font: 300 22px/36px "aktiv-grotesk", sans-serif;
+  --lifely-medium-web-subtitles-font: 700 30px/38px "aktiv-grotesk", sans-serif;
+
   /* typography for big screen:
    !! only use primary font for titles
    !! only use secondary font for the intro onliner
@@ -36,8 +48,13 @@
 
   --lifely-web-primary-font: 700 56px/68px "aktiv-grotesk", sans-serif;
   --lifely-web-subtitles-font: 700 32px/40px "aktiv-grotesk", sans-serif;
-  --lifely-web-big-secondary-font: 400 24px/34px "Playfair Display", serif;
+  --lifely-web-secondary-font: 400 24px/34px "Playfair Display", serif;
   --lifely-web-base-font: 300 26px/38px "aktiv-grotek", sans-serif;
+
+  --lifely-web-ai-step-counter: 700 16px/24px "aktiv-grotesk", sans-serif;
+  --lifely-web-ai-step-title: 700 32px/41px "aktiv-grotesk", sans-serif;
+  --lifely-web-ai-step-subtitle: 700 24px/32px "aktiv-grotesk", sans-serif;
+  --lifely-web-ai-step-text: 300 20px/36px "aktiv-grotesk", sans-serif;
 }
 
 /* 
@@ -235,7 +252,13 @@ svg {
 
 /* 
                               ai steps 
+
 */
+
+.ai-sprint-steps-web {
+  display: none;
+}
+
 .ai-sprint-steps {
   margin-bottom: 0px 25px 25px 50px;
 }
@@ -512,39 +535,42 @@ footer {
                                  typografie  
   */
   h1 {
-    font: var(--lifely-web-primary-font);
+    font: var(--lifely-medium-web-primary-font);
     color: var(--lifely-grey99);
     margin: 0px;
   }
 
   h2 {
-    font: var(--lifely-web-subtitles-font);
+    font: var(--lifely-medium-web-subtitles-font);
     color: var(--lifely-grey99);
   }
 
   p {
-    font: var(--lifely-web-base-font);
+    font: var(--lifely-medium-web-base-font);
     color: var(--lifely-grey99);
   }
   /* 
                                  title
   */
   .main-content {
-    margin: 0px 0px 30px 0px;
+    margin: 0px 50px 75px 0px;
     display: block;
   }
 
   .title {
     display: grid;
     grid:
-      ". title1 title1 ." 0.5fr
+      ". title1 title1 ." 0.25fr
       ". title2 img ." 0.5fr
-      ". t img ." 1fr
-      ". . . ." 0.5fr
-      / 0.5fr 1fr 1fr 0.25fr;
+      ". t img ." 0.5fr
+      ". . . ." 0.25fr
+      / 0.1fr 1fr 1fr 0.1fr;
     gap: 25px;
 
     justify-content: center;
+    align-content: center;
+    justify-items: start;
+    align-items: start;
   }
 
   .intro {
@@ -553,7 +579,7 @@ footer {
   }
 
   .intro-oneliner {
-    font: var(--lifely-web-big-secondary-font);
+    font: var(--lifely-web-secondary-font);
     font-style: normal;
 
     letter-spacing: 0.04em;
@@ -578,7 +604,7 @@ footer {
   }
 
   .abstract-image-v2 img {
-    width: 500px;
+    width: 100%;
   }
 
   .abstract-main-text {
@@ -641,4 +667,438 @@ footer {
   /* 
                                  dictionary quote
   */
+
+  .dictionary {
+    display: grid;
+    grid:
+      ". d ." 1fr
+      / 0.5fr 1fr 0.5fr;
+    background: var(--lifely-grey99);
+  }
+
+  .dictionary-quote {
+    background: var(--lifely-grey99);
+    grid-area: d;
+  }
+
+  .dictionary-quote dfn {
+    font: 100 24px/34px "Playfair Display", serif;
+    color: var(--white);
+    margin: 20px 20px 0px 20px;
+  }
+
+  .dictionary-quote p {
+    font: 300 18px/26px "aktiv-grotesk", sans-serif;
+    color: var(--white);
+    margin: 20px 20px 0px 20px;
+  }
+
+  .subtext {
+    opacity: 60%;
+    margin: 20px 20px 0px 20px;
+    padding-bottom: 24px;
+    border-bottom: 1px solid hsla(53, 7%, 76%, 0.5);
+  }
+
+  /* 
+                              ai steps 
+*/
+
+  .ai-sprint-steps {
+    display: none;
+  }
+
+  .step-count {
+    font: var(--lifely-web-ai-step-counter);
+    color: var(--lifely-accent-red);
+  }
+
+  .step-title {
+    font: var(--lifely-web-ai-step-title);
+    color: var(--lifely-grey99);
+  }
+
+  .step-subtitle {
+    font: var(--lifely-web-ai-step-subtitle);
+    color: var(--lifely-grey99);
+  }
+
+  .step-explain {
+    font: var(--lifely-web-ai-step-text);
+    color: var(--lifely-grey70);
+    margin-top: 10px;
+  }
+
+  .ai-sprint-steps-web {
+    display: grid;
+    grid:
+      ". m-t m-t . ." 0.1fr
+      ". sc1 sc1 sc1 ." 0.1fr
+      ". st1 se1 se1 ." 0.5fr
+      ". sc2 sc2 sc2 ." 0.1fr
+      ". st2 se2 se2 ." 0.5fr
+      ". sc3 sc3 sc3 ." 0.1fr
+      ". st3 se3 se3 ." 0.5fr
+      ". sc4 sc4 sc4 ." 0.1fr
+      ". st4 se4 se4 ." 0.5fr
+      ". sc5 sc5 sc5 ." 0.1fr
+      ". st5 se5 se5 ." 0.5fr
+      / 0.5fr 1fr 1fr 1fr 0.5fr;
+    gap: 20px;
+
+    margin-top: 100px;
+  }
+
+  .ai-sprint-steps-main-title {
+    grid-area: m-t;
+    margin-top: 10px;
+  }
+
+  .ai-sprint-steps-counter-1 {
+    grid-area: sc1;
+    padding-top: 10px;
+  }
+
+  .ai-steps-title-1 {
+    grid-area: st1;
+  }
+
+  .step-text-1 {
+    grid-area: se1;
+  }
+
+  .ai-sprint-steps-counter-2 {
+    grid-area: sc2;
+  }
+
+  .ai-steps-title-2 {
+    grid-area: st2;
+  }
+
+  .step-text-2 {
+    grid-area: se2;
+  }
+
+  .ai-sprint-steps-counter-3 {
+    grid-area: sc3;
+  }
+
+  .ai-steps-title-3 {
+    grid-area: st3;
+  }
+
+  .step-text-3 {
+    grid-area: se3;
+  }
+
+  .ai-sprint-steps-counter-4 {
+    grid-area: sc4;
+  }
+
+  .ai-steps-title-4 {
+    grid-area: st4;
+  }
+
+  .step-text-4 {
+    grid-area: se4;
+  }
+
+  .ai-sprint-steps-counter-5 {
+    grid-area: sc5;
+  }
+
+  .ai-steps-title-5 {
+    grid-area: st5;
+  }
+
+  .step-text-5 {
+    grid-area: se5;
+  }
+}
+
+/* 
+                            bigger screens 
+*/
+
+@media screen and (min-width: 90.8125em) {
+  /* 
+                                 typografie  
+  */
+  h1 {
+    font: var(--lifely-web-primary-font);
+    color: var(--lifely-grey99);
+    margin: 0px;
+  }
+
+  h2 {
+    font: var(--lifely-web-subtitles-font);
+    color: var(--lifely-grey99);
+  }
+
+  p {
+    font: var(--lifely-web-base-font);
+    color: var(--lifely-grey99);
+  }
+  /* 
+                                 title
+  */
+  .main-content {
+    margin: 0px 75px 30px 200px;
+    display: block;
+  }
+
+  .title {
+    display: grid;
+    grid:
+      ". title1 title1 ." 0.25fr
+      ". title2 img ." 0.5fr
+      ". t img ." 1fr
+      ". . . ." 0.25fr
+      / 0.1fr 1fr 1fr 0.1fr;
+    gap: 25px;
+
+    justify-content: center;
+  }
+
+  .intro {
+    grid-area: title1;
+    padding-top: 110px;
+  }
+
+  .intro-oneliner {
+    font: var(--lifely-web-secondary-font);
+    font-style: normal;
+
+    letter-spacing: 0.04em;
+    color: var(--lifely-grey70);
+
+    margin-bottom: 0px;
+  }
+
+  .main-title-box {
+    margin: 0px;
+    grid-area: title2;
+  }
+
+  .abstract-image img {
+    width: 100%;
+    display: none;
+  }
+
+  .abstract-image-v2 {
+    display: block;
+    grid-area: img;
+  }
+
+  .abstract-image-v2 img {
+    width: 75%;
+  }
+
+  .abstract-main-text {
+    display: block;
+    grid-area: t;
+  }
+
+  .abstract {
+    display: none;
+  }
+
+  /* 
+                       buttons
+ */
+
+  .call-to-action {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 24px;
+    margin-bottom: -40px;
+  }
+
+  .lifely-primary-button {
+    display: inline-flex;
+    flex-wrap: wrap;
+
+    padding: 12px 32px;
+    align-items: center;
+
+    background-color: var(--lifely-accent-red);
+    border: none;
+    color: var(--white);
+    font-family: "aktiv-grotesk";
+    font-weight: 700;
+    line-height: 20px;
+
+    font-size: 16px;
+    margin: 0px 40px 40px 0px;
+
+    transition-duration: 0.3s;
+    transition-timing-function: ease-out;
+    transition-property: background-color, color;
+  }
+
+  .lifely-primary-button:hover {
+    background-color: var(--lifely-hover-red);
+  }
+
+  .lifely-secondary-button {
+    display: inline-flex;
+    align-items: center;
+    font-family: "aktiv-grotesk";
+    font-size: 16px;
+    line-height: 20px;
+    font-weight: 400;
+    text-decoration: none;
+    color: #ff6b6b;
+  }
+
+  /* 
+                                 dictionary quote
+  */
+
+  .dictionary {
+    display: grid;
+    grid:
+      ". d ." 1fr
+      / 0.5fr 1fr 0.5fr;
+    background: var(--lifely-grey99);
+  }
+
+  .dictionary-quote {
+    background: var(--lifely-grey99);
+    grid-area: d;
+  }
+
+  .dictionary-quote dfn {
+    font: 100 24px/34px "Playfair Display", serif;
+    color: var(--white);
+    margin: 20px 20px 0px 20px;
+  }
+
+  .dictionary-quote p {
+    font: 300 18px/26px "aktiv-grotesk", sans-serif;
+    color: var(--white);
+    margin: 20px 20px 0px 20px;
+  }
+
+  .subtext {
+    opacity: 60%;
+    margin: 20px 20px 0px 20px;
+    padding-bottom: 24px;
+    border-bottom: 1px solid hsla(53, 7%, 76%, 0.5);
+  }
+
+  /* 
+                              ai steps 
+*/
+
+  .ai-sprint-steps {
+    display: none;
+  }
+
+  .step-count {
+    font: var(--lifely-web-ai-step-counter);
+    color: var(--lifely-accent-red);
+  }
+
+  .step-title {
+    font: var(--lifely-web-ai-step-title);
+    color: var(--lifely-grey99);
+  }
+
+  .step-subtitle {
+    font: var(--lifely-web-ai-step-subtitle);
+    color: var(--lifely-grey99);
+  }
+
+  .step-explain {
+    font: var(--lifely-web-ai-step-text);
+    color: var(--lifely-grey70);
+    margin-top: 10px;
+  }
+
+  .ai-sprint-steps-web {
+    display: grid;
+    grid:
+      ". m-t m-t . ." 0.1fr
+      ". sc1 sc1 sc1 ." 0.1fr
+      ". st1 se1 se1 ." 0.5fr
+      ". sc2 sc2 sc2 ." 0.1fr
+      ". st2 se2 se2 ." 0.5fr
+      ". sc3 sc3 sc3 ." 0.1fr
+      ". st3 se3 se3 ." 0.5fr
+      ". sc4 sc4 sc4 ." 0.1fr
+      ". st4 se4 se4 ." 0.5fr
+      ". sc5 sc5 sc5 ." 0.1fr
+      ". st5 se5 se5 ." 0.5fr
+      / 1fr 1fr 1fr 1fr 1fr;
+    gap: 20px;
+
+    margin-top: 100px;
+  }
+
+  .ai-sprint-steps-main-title {
+    grid-area: m-t;
+    margin-top: 10px;
+  }
+
+  .ai-sprint-steps-counter-1 {
+    grid-area: sc1;
+    padding-top: 10px;
+  }
+
+  .ai-steps-title-1 {
+    grid-area: st1;
+  }
+
+  .step-text-1 {
+    grid-area: se1;
+  }
+
+  .ai-sprint-steps-counter-2 {
+    grid-area: sc2;
+  }
+
+  .ai-steps-title-2 {
+    grid-area: st2;
+  }
+
+  .step-text-2 {
+    grid-area: se2;
+  }
+
+  .ai-sprint-steps-counter-3 {
+    grid-area: sc3;
+  }
+
+  .ai-steps-title-3 {
+    grid-area: st3;
+  }
+
+  .step-text-3 {
+    grid-area: se3;
+  }
+
+  .ai-sprint-steps-counter-4 {
+    grid-area: sc4;
+  }
+
+  .ai-steps-title-4 {
+    grid-area: st4;
+  }
+
+  .step-text-4 {
+    grid-area: se4;
+  }
+
+  .ai-sprint-steps-counter-5 {
+    grid-area: sc5;
+  }
+
+  .ai-steps-title-5 {
+    grid-area: st5;
+  }
+
+  .step-text-5 {
+    grid-area: se5;
+  }
 }
