--- a/styles/style.css
+++ b/styles/style.css
@@ -814,6 +814,137 @@ footer {
   .step-text-5 {
     grid-area: se5;
   }
+
+  /*
+                                       contact
+   */
+
+  .contact {
+    display: grid;
+    margin: 200px 25px 50px 25px;
+    grid:
+      ".  p t w . " 0.5fr
+      ".  p t w . " 1fr
+      ".  p . . ." 0.5fr
+      / 0.5fr 1fr 1fr 1fr 0.5fr;
+    gap: 25px;
+  }
+
+  .contact img {
+    width: 100%;
+    margin-bottom: 0px;
+  }
+
+  .contact-image {
+    grid-area: p;
+  }
+
+  .contact-title {
+    grid-area: t;
+    margin-left: 50px;
+  }
+
+  .contact-text {
+    font: 300 18px/26px "aktiv-grotesk", sans-serif;
+  }
+
+  .contact-info {
+    padding-left: 30px;
+  }
+
+  .wrapper {
+    grid-area: w;
+    margin-left: 50px;
+  }
+
+  .wrapper .months {
+    display: flex;
+    align-items: center;
+    padding: 0px 30px 10px 0px;
+    justify-content: space-between;
+    font-family: "aktiv-grotesk", sans-serif;
+  }
+  .months .icons {
+    display: flex;
+  }
+  .months .icons span {
+    height: 38px;
+    width: 38px;
+    margin: 0 1px;
+    cursor: pointer;
+    color: var(--lifely-grey99);
+    text-align: center;
+    line-height: 38px;
+    font-size: 1.9rem;
+    user-select: none;
+    border-radius: 50%;
+  }
+  .icons span:last-child {
+    margin-right: -10px;
+  }
+  .months .icons span:hover {
+    background: #f2f2f2;
+  }
+  .months .current-date {
+    font-size: 20px;
+    font-weight: 500;
+    font-family: "aktiv-grotesk", sans-serif;
+    color: var(--lifely-grey99);
+  }
+  .calendar {
+    padding: 0px;
+  }
+  .calendar ul {
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    text-align: center;
+    padding-left: 0px;
+  }
+  .calendar .days {
+    margin-bottom: 20px;
+    padding-left: 0px;
+  }
+  .calendar li {
+    color: var(--lifely-grey99);
+    width: calc(100% / 7);
+    font-size: 14px;
+    font-family: "aktiv-grotesk", sans-serif;
+    font-weight: 400;
+  }
+  .calendar .weeks li {
+    font-weight: 500;
+    cursor: default;
+  }
+  .calendar .days li {
+    z-index: 1;
+    cursor: pointer;
+    position: relative;
+    margin-top: 30px;
+  }
+  .days li.inactive {
+    color: var(--lifely-grey50);
+  }
+  .days li.active {
+    color: #fff;
+  }
+  .days li::before {
+    position: absolute;
+    content: "";
+    left: 50%;
+    top: 50%;
+    height: 40px;
+    width: 40px;
+    z-index: -1;
+    border-radius: 50%;
+    transform: translate(-50%, -50%);
+  }
+  .days li.active::before {
+    background: var(--lifely-accent-red);
+  }
+  .days li:not(.active):hover::before {
+    background: #f2f2f2;
+  }
 }
 
 /* 
@@ -1100,5 +1231,136 @@ footer {
 
   .step-text-5 {
     grid-area: se5;
+  }
+
+  /*
+                                       contact
+   */
+
+  .contact {
+    display: grid;
+    margin: 200px 25px 50px 25px;
+    grid:
+      ".  p t t . " 0.5fr
+      ".  p w . . " 1fr
+      ".  p . . ." 0.5fr
+      / 0.5fr 1fr 1fr 1fr 0.5fr;
+    gap: 25px;
+  }
+
+  .contact img {
+    width: 100%;
+    margin-bottom: 0px;
+  }
+
+  .contact-image {
+    grid-area: p;
+  }
+
+  .contact-title {
+    grid-area: t;
+    margin-left: 50px;
+  }
+
+  .contact-text {
+    font: 300 18px/26px "aktiv-grotesk", sans-serif;
+  }
+
+  .contact-info {
+    padding-left: 30px;
+  }
+
+  .wrapper {
+    grid-area: w;
+    margin-left: 50px;
+  }
+
+  .wrapper .months {
+    display: flex;
+    align-items: center;
+    padding: 25px 30px 10px 15px;
+    justify-content: space-between;
+    font-family: "aktiv-grotesk", sans-serif;
+  }
+  .months .icons {
+    display: flex;
+  }
+  .months .icons span {
+    height: 38px;
+    width: 38px;
+    margin: 0 1px;
+    cursor: pointer;
+    color: var(--lifely-grey99);
+    text-align: center;
+    line-height: 38px;
+    font-size: 1.9rem;
+    user-select: none;
+    border-radius: 50%;
+  }
+  .icons span:last-child {
+    margin-right: -10px;
+  }
+  .months .icons span:hover {
+    background: #f2f2f2;
+  }
+  .months .current-date {
+    font-size: 20px;
+    font-weight: 500;
+    font-family: "aktiv-grotesk", sans-serif;
+    color: var(--lifely-grey99);
+  }
+  .calendar {
+    padding: 0px;
+  }
+  .calendar ul {
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    text-align: center;
+    padding-left: 0px;
+  }
+  .calendar .days {
+    margin-bottom: 20px;
+    padding-left: 0px;
+  }
+  .calendar li {
+    color: var(--lifely-grey99);
+    width: calc(100% / 7);
+    font-size: 14px;
+    font-family: "aktiv-grotesk", sans-serif;
+    font-weight: 400;
+  }
+  .calendar .weeks li {
+    font-weight: 500;
+    cursor: default;
+  }
+  .calendar .days li {
+    z-index: 1;
+    cursor: pointer;
+    position: relative;
+    margin-top: 30px;
+  }
+  .days li.inactive {
+    color: var(--lifely-grey50);
+  }
+  .days li.active {
+    color: #fff;
+  }
+  .days li::before {
+    position: absolute;
+    content: "";
+    left: 50%;
+    top: 50%;
+    height: 40px;
+    width: 40px;
+    z-index: -1;
+    border-radius: 50%;
+    transform: translate(-50%, -50%);
+  }
+  .days li.active::before {
+    background: var(--lifely-accent-red);
+  }
+  .days li:not(.active):hover::before {
+    background: #f2f2f2;
   }
 }
