--- a/styles/style.css
+++ b/styles/style.css
@@ -351,8 +351,8 @@ svg {
   margin: 50px 25px 50px 25px;
   grid:
     "T" 0.5fr
-    "M" 1fr
-    "C" 100%
+    "M" 0.5fr
+    "C" 1fr
     / 1fr;
 }
 
@@ -518,7 +518,11 @@ footer {
   font: var(--lifely-mobile-footer-title-font);
 }
 
-.footer-content .footer-titles {
+.footer-content .footer-titles-1 {
+  width: calc(100% - 1rem);
+}
+
+.footer-content .footer-titles-2 {
   width: calc(100% - 1rem);
 }
 
@@ -946,6 +950,65 @@ footer {
   }
   .days li:not(.active):hover::before {
     background: #f2f2f2;
+  }
+
+  /* 
+                              footer 
+                    
+    */
+
+  footer {
+    position: relative;
+    background-color: var(--lifely-grey99);
+    color: var(--white);
+    padding-top: 50px;
+    padding-bottom: 10px;
+  }
+
+  .footer-content {
+    display: grid;
+    grid:
+      ". lifely services solution ." 1fr
+      / 0.5fr 1fr 1fr 1fr 0.5fr;
+    gap: 8px;
+    margin-bottom: 40px;
+  }
+
+  .footer-logo {
+    height: 24px;
+  }
+
+  .footer .main-content {
+    padding: 8px 0;
+    color: #c6c5bd;
+    text-decoration: none;
+  }
+
+  .footer-links {
+    padding: 0px 0px 8px 0px;
+  }
+
+  .footer-links .footer-item {
+    font: var(--lifely-mobile-footer-font);
+    color: var(--lifely-grey50);
+    list-style: none;
+    padding: 8px 0;
+  }
+
+  .footer-content .footer-text-title {
+    font: var(--lifely-mobile-footer-title-font);
+  }
+
+  .footer-main-content {
+    grid-area: lifely;
+  }
+
+  .footer-titles-1 {
+    grid-area: services;
+  }
+
+  .footer-titles-2 {
+    grid-area: solution;
   }
 }
 
@@ -1375,19 +1438,16 @@ footer {
     position: relative;
     background-color: var(--lifely-grey99);
     color: var(--white);
-    padding-top: 30px;
+    padding-top: 50px;
     padding-bottom: 10px;
-
-    padding-right: 1rem;
-    padding-left: 1rem;
   }
 
   .footer-content {
-    display: flex;
-    flex-flow: row wrap;
-    width: calc(100% - 1rem);
-    margin-right: 0.5rem;
-    margin-left: 0.5rem;
+    display: grid;
+    grid:
+      ". lifely services solution ." 1fr
+      / 0.5fr 1fr 1fr 1fr 0.5fr;
+    gap: 8px;
     margin-bottom: 40px;
   }
 
@@ -1399,8 +1459,6 @@ footer {
     padding: 8px 0;
     color: #c6c5bd;
     text-decoration: none;
-    display: flex;
-    width: calc(100% - 1rem);
   }
 
   .footer-links {
@@ -1408,7 +1466,6 @@ footer {
   }
 
   .footer-links .footer-item {
-    display: flex;
     font: var(--lifely-mobile-footer-font);
     color: var(--lifely-grey50);
     list-style: none;
@@ -1419,7 +1476,15 @@ footer {
     font: var(--lifely-mobile-footer-title-font);
   }
 
-  .footer-content .footer-titles {
-    width: calc(100% - 1rem);
+  .footer-main-content {
+    grid-area: lifely;
+  }
+
+  .footer-titles-1 {
+    grid-area: services;
+  }
+
+  .footer-titles-2 {
+    grid-area: solution;
   }
 }
